fixed layout issues

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header {
     margin-bottom: 30px;
     overflow: hidden;
     background-color: #f7f7f7;
-    position: fixed;
+    position: static;
     width: 100%;
     top: 0;
     z-index: 1;
@@ -25,6 +25,7 @@ header {
 #main-nav {
     width: 720px;
     margin: 0 auto;
+
 }
 
 #nav {
@@ -152,7 +153,7 @@ a {
 }
 
 .wrapper {
-    margin: 70px auto;
+    margin: 30px auto;
     width: 720px;
     margin-bottom: 20px;
 }
